Bug 78062 - EDITING: long wait on Undo
Summary: EDITING: long wait on Undo
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.2.3.3 release
Hardware: All All
: medium normal
Assignee: Kohei Yoshida
URL:
Whiteboard: BSA target:4.3.0 target:4.2.5
Keywords:
Depends on:
Blocks:
 
Reported: 2014-04-29 06:07 UTC by Anton Derbenev
Modified: 2014-05-08 15:12 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
sample spreadsheet to hang LO (51.03 KB, application/vnd.oasis.opendocument.spreadsheet)
2014-04-29 06:07 UTC, Anton Derbenev
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Anton Derbenev 2014-04-29 06:07:17 UTC
Created attachment 98158 [details]
sample spreadsheet to hang LO

Problem description: 

Steps to reproduce:
1. Open attached file
2. Clear out cells (Ctrl+A, Del)
3. Insert a row before row #257 (Ctrl+"+")
4. Undo twice (Ctrl+Z, Ctrl+Z)

Current behavior:
LO hangs

Expected behavior:
at least show some meaningful error if something gone wrong
              
Operating System: Windows XP
Version: 4.2.3.3 release
Comment 1 Anton Derbenev 2014-04-29 12:44:00 UTC
same with 4.2.4.1 and nightly libo-42~2014-04-28_10.24.37_LibreOfficeDev_4.2.5.0.0_Win_x86.msi
Comment 2 Jean-Baptiste Faure 2014-04-29 21:17:00 UTC
Not reproducible for me with LO 4.2.5.0.0+ nor the master under Ubuntu 14.04 x86-64. Undo take some time (~20 s) but LO does not freeze.

Best regards. JBF
Comment 3 Anton Derbenev 2014-04-30 06:30:19 UTC
Ok, I agree, I hasted.
4.2.5.0.0+ really unfreezes after awhile (about 60 seconds for me).

4.2.4.1 still does not in several minutes.
Comment 4 Jacques Guilleron 2014-04-30 12:03:40 UTC
Hello Anton,

I reproduce with LO 4.2.4.1, LO 4.3.0.0.alpha0+
Build ID: d2555ebb240fea2780f152e5ea39d145aab508fe
TinderBox: Win-x86@39, Branch:master, Time: 2014-04-14_07:59:52
on Windows 7 Home Premium.
I don't reproduce with LO 4.1.6.2.
I set Status to NEW.

Jacques
Comment 5 Anton Derbenev 2014-04-30 12:22:53 UTC
by the way, I just tested again. 4.2.4.1 unfreezed in about 10 minutes for me.
Maybe prev versions will unfreeze too, still it's far from usable.
Will edit title though.
Comment 6 Kohei Yoshida 2014-05-02 21:42:15 UTC
Doing Ctrl-A, Del, and undo is enough to reproduce the freeze.
Comment 7 Kohei Yoshida 2014-05-03 00:27:00 UTC
I'll take a look.
Comment 8 Commit Notification 2014-05-03 04:55:59 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=af7df25bcc8bc95462e2b3bf8c003d035111a479

fdo#78062: Broadcast only on non-empty cells within deleted range.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Kohei Yoshida 2014-05-03 05:02:59 UTC
4.2 backport: https://gerrit.libreoffice.org/9240
Comment 10 Cor Nouws 2014-05-06 18:12:27 UTC
*** Bug 78346 has been marked as a duplicate of this bug. ***
Comment 11 Commit Notification 2014-05-08 13:19:42 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=23e43dfd8a4b26a9adee87e5274b82a6d1d84a57&h=libreoffice-4-2

fdo#78062: Broadcast only on non-empty cells within deleted range.


It will be available in LibreOffice 4.2.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Kohei Yoshida 2014-05-08 13:22:32 UTC
Fixed in 4.2.
Comment 13 Jacques Guilleron 2014-05-08 14:16:36 UTC
Works now. 
Verified with Master LO 4.3.0.0.alpha1+
Build ID: 657004ae5c9f4a07b2cdafbb21bc8657842d4d74
TinderBox: Win-x86@39, Branch:master, Time: 2014-05-08_00:35:12

Thank you Kohei,

Have a nice day,

Jacques
Comment 14 Jean-Baptiste Faure 2014-05-08 15:12:22 UTC
Works as expected now in LO 4.2.5.0.0+. The change is impressive !
Thank you for having backported the fix to 4.2 branch.

Forgot to update platform to All.

Best regards. JBF