fdo#78062: Broadcast only on non-empty cells within deleted range.

We don't want to broadcast over the whole selected range, which may be
the whole sheet which is well over 1 billion cells !

Change-Id: I7c139ce5efe09312cf824e35f0efe551184032eb